# drwright

./: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.in  drwright.desktop.in  drwright.doap  drwright.spec.in
data/: Makefile.am
data/glade/: Makefile.am  drw-preferences.glade
data/images/: Makefile.am
po/: .cvsignore  ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  (+63 more)
src/: .cvsignore  Makefile.am  dbus.c  dbus.h  drw-break-window.c  drw-break-window.h  drw-cc-module.c  drw-cc-panel.c  drw-cc-panel.h  drw-intl.h  drw-monitor.c  drw-monitor.h  drw-preferences.c  drw-preferences.h  drw-timer.c  drw-timer.h  drw-utils.c  drw-utils.h  drwright-panel.glade  drwright.c  drwright.h  drwright.schemas  drwright.schemas.in  gnome-typing-break-panel.desktop.in.in  gsd-typing-break-manager.c  gsd-typing-break-manager.h  gsd-typing-break-plugin.c  main.c  org.gnome-settings-daemon.plugins.TypingBreak.gschema.xml.in  org.gnome.settings-daemon.plugins.typing-break.gschema.xml.in
